<?xml version="1.0" encoding="utf-8"?>
<resources>
    <color name="bk_bg">#FF000000</color>
    <color name="bk_surface">#FF121212</color>
    <color name="bk_url_bar">#FF2A2A2A</color>
    <color name="bk_primary">#FF6C63FF</color>
    <color name="bk_on_primary">#FFFFFFFF</color>
    <color name="bk_text_primary">#FFF5F5F7</color>
    <color name="bk_text_secondary">#FF9CA3AF</color>
    <color name="bk_chrome_icon">#FFD1D5DB</color>
    <color name="bk_chrome_active">#F4551A</color>
    <color name="bk_chrome_disabled">#FF4B5563</color>
    <color name="bk_divider">#FF2D3340</color>
    <color name="bk_error">#FFEF4444</color>
    <color name="bk_accent">#F4551A</color>
    <color name="bk_tab_footer">#FF1A1A1A</color>
    <color name="bk_sheet">#FF1A1D2E</color>
    <color name="bk_download_fab_start">#F88551</color>
    <color name="bk_download_fab_end">#F4551A</color>
    <color name="bk_history_card">#FF1C1E23</color>
    <color name="bk_history_section">#FF9CA3AF</color>
    <color name="bk_history_icon_globe_bg">#3048D6F8</color>
    <color name="bk_history_icon_globe">#F4551A</color>
    <color name="bk_history_icon_video_bg">#FF3D2A14</color>
    <color name="bk_history_icon_video">#FFFF9800</color>
    <color name="bk_history_icon_settings_bg">#FF2A1F3D</color>
    <color name="bk_history_icon_settings">#FF9C27B0</color>
    <color name="bk_history_clear">#F4551A</color>
    <color name="bk_quality_resolution">#F4551A</color>
    <color name="bk_quality_card">#FF1C1E23</color>
    <color name="bk_blocked_dialog_bg">#FF1A1C22</color>
    <color name="bk_youtube_red">#F4551A</color>
    <color name="black">#FF000000</color>

    <string name="bk_back">Back</string>
    <string name="bk_forward">Forward</string>
    <string name="bk_reload">Reload</string>
    <string name="bk_stop">Stop</string>
    <string name="bk_home">Home</string>
    <string name="bk_menu">Menu</string>
    <string name="bk_clear_url">Clear</string>
    <string name="bk_tabs">Tabs</string>
    <string name="bk_new_tab">New tab</string>
    <string name="bk_close_tab">Close tab</string>
    <string name="bk_close_tabs">Close tabs</string>
    <string name="bk_address_hint">Search or enter URL</string>
    <string name="bk_download">Download</string>
    <string name="bk_downloading">Downloading…</string>
    <string name="bk_no_video_detected">No video detected on this page</string>
    <string name="bk_detecting">Detecting video…</string>
    <string name="bk_select_format">Select format</string>
    <string name="bk_start_download">Start download</string>
    <string name="bk_cancel">Cancel</string>
    <string name="bk_history">History</string>
    <string name="bk_history_today">TODAY</string>
    <string name="bk_history_yesterday">YESTERDAY</string>
    <string name="bk_history_empty">No browsing history yet</string>
    <string name="bk_clear_history_confirm">Clear all browsing history?</string>
    <string name="bk_bookmarks">Bookmarks</string>
    <string name="bk_add_bookmark">Add bookmark</string>
    <string name="bk_clear_history">Clear history</string>
    <string name="bk_desktop_mode">Desktop site</string>
    <string name="bk_mobile_mode">Mobile site</string>
    <string name="bk_downloads">Downloads</string>
    <string name="bk_settings">Settings</string>
    <string name="bk_find_in_page">Find in page</string>
    <string name="bk_clear_browsing_data">Clear browsing data</string>
    <string name="bk_share">Share</string>
    <string name="bk_report_issue">Report an issue</string>
    <string name="bk_help_feedback">Help &amp; Feedback</string>
    <string name="bk_find_hint">Find ....</string>
    <string name="bk_no_matches">No matches found</string>
    <string name="bk_clear_data_confirm">Clear history, cache, and cookies?</string>
    <string name="bk_data_cleared">Browsing data cleared</string>
    <string name="bk_no_downloads">No downloads yet</string>
    <string name="bk_reload_page">Reload page</string>
    <string name="bk_force_stream_detection">Force stream detection</string>
    <string name="bk_legacy_m3u8_detection">Legacy m3u8 (yt-dlp)</string>
    <string name="bk_download_started">Download started</string>
    <string name="bk_download_failed">Download failed</string>
    <string name="bk_download_complete">Download complete</string>
    <string name="bk_download_cancelled">Download cancelled</string>
    <string name="bk_notification_download_started">Download started</string>
    <string name="bk_notification_percent">Downloading %1$d%%</string>
    <string name="bk_notification_tap_progress">Tap to open downloads</string>
    <string name="bk_notification_tap_play">Tap to play</string>
    <string name="bk_notification_channel_progress">Download progress</string>
    <string name="bk_notification_channel_complete">Download complete</string>
    <string name="bk_play">Play</string>
    <string name="bk_init_failed">Browser engine failed to initialize</string>
    <string name="bk_section_browser_downloads">Browser downloads</string>
    <string name="bk_video_link">VIDEO LINK</string>
    <string name="bk_choose_quality">Choose Quality</string>
    <string name="bk_download_video">Download Video</string>
    <string name="bk_quality_full_hd">Full HD</string>
    <string name="bk_quality_hd">HD</string>
    <string name="bk_quality_standard">Standard</string>
    <string name="bk_youtube_blocked_title">YouTube Warning</string>
    <string name="bk_youtube_blocked_message">You can watch YouTube here, but downloading YouTube videos is not supported.</string>
    <string name="bk_adult_blocked_title">Site blocked</string>
    <string name="bk_adult_blocked_message">Adult websites are not allowed in this app.</string>
    <string name="bk_okey">Okay</string>
</resources>
